# dns-zonefile

./: Cargo.toml  README.md
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/dns_zonefile/: all.html  constant.DEFAULT_TEMPLATE.html  index.html  sidebar-items.js  struct.A.html  struct.Aaaa.html  struct.Caa.html  struct.Cname.html  struct.DnsZone.html  struct.DnsZonefile.html  struct.Ds.html  struct.Mx.html  struct.Ns.html  struct.Ptr.html  struct.Soa.html  struct.Spf.html  struct.Srv.html  struct.Txt.html
doc/dns_zonefile/dns_structs/: constant.DEFAULT_TEMPLATE.html  struct.A.html  struct.Aaaa.html  struct.Caa.html  struct.Cname.html  struct.DnsZone.html  struct.Ds.html  struct.Mx.html  struct.Ns.html  struct.Ptr.html  struct.Soa.html  struct.Spf.html  struct.Srv.html  struct.Txt.html
doc/search.desc/dns_zonefile/: dns_zonefile-desc-0-.js
doc/src/dns_zonefile/: dns_structs.rs.html  generator.rs.html  lib.rs.html  parser.rs.html
doc/trait.impl/core/clone/: trait.Clone.js
doc/trait.impl/core/cmp/: trait.PartialEq.js
doc/trait.impl/core/default/: trait.Default.js
doc/trait.impl/core/fmt/: trait.Debug.js
doc/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
doc/trait.impl/serde/de/: trait.Deserialize.js
doc/trait.impl/serde/ser/: trait.Serialize.js
src/: dns_structs.rs  generator.rs  lib.rs  parser.rs
tests/: zonefile_forward.json  zonefile_reverse_ipv4.json  zonefile_reverse_ipv6.json
(+2 files in other folders)
