[package]
name = "dns-zonefile"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] , optional = true }
paperclip = { version = "0.8", features = ["actix4"], optional = true }
schemars = { package = "apistos-schemars", version = "0.8", optional = true }
apistos = { version = "0.6", optional = true } 

[features]
default = ["serde"]
paperclip = ["dep:paperclip"]
serde = ["dep:serde"]
apistos = ["dep:apistos", "dep:schemars"]

[dev-dependencies]
serde_json = "1"

[lib]
name = "dns_zonefile"
path = "src/lib.rs"
doctest = false
